perf-regression: workaround hyperfoil-maven-plugin issue with JDK 17 #4016